<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">

    <item
        android:id="@+id/menu_spinner"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/settings_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_a_z"
                    android:title="@string/sort_a_z"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_z_a"
                    android:title="@string/sort_z_a"

                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_first_end"
                    android:title="@string/sort_date_ascending"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_end_first"
                    android:title="@string/sort_date_descending"
                    app:showAsAction="never"/>
            </group>

        </menu>
    </item>

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings_name"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add_item"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_items"
        android:title="@string/action_add_item_x3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_items"
        android:title="@string/action_delete_item"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>
